hide imagewrapper until an image has been uploaded to avoid unnecessary white space

--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,7 @@ input[type=text], input[type=password], #description {
 }
 
 .imageWrapper{
+    display: none;
     margin-bottom: 1.5em;
 }
 
